--- a/projects/collect/src/assets/i18n/bn-IN.json
+++ b/projects/collect/src/assets/i18n/bn-IN.json
@@ -36,6 +36,21 @@
     "forms.label.current_status": "এখনকার অবস্থা",
     "forms.label.taken_test": "আপনি যদি একটি COVID-19 পরীক্ষা নিয়েছ?",
     "forms.label.health_conditions": "স্বাস্থ্যের অবস্থা",
+    "forms.label.smoking_habits": "আপনার কি ধূমপানের অভ্যাস আছে?",
+ "forms.label.vacc_status": "টিকাদানের স্থিতি?",
+ "forms.label.symptoms": "আপনার কি এই লক্ষণগুলির কোনও রয়েছে?",
+ "forms.label.conditions": "আপনার কি এই শর্তগুলির কোনও আছে?",
+ "forms.label.resp_ail": "আপনার কি এই শ্বাসকষ্টজনিত অসুস্থতা রয়েছে?",
+ "forms.label.pre_exist": "আপনার কি এই পূর্ব-বিদ্যমান শর্তগুলির কোনও আছে?",
+ "forms.label.test_type": "আপনি কোন পরীক্ষা দিয়েছেন?",
+ "forms.label.when_test": "আপনি কখন পরীক্ষা দিয়েছেন?",
+ "forms.label.test_date": "পরীক্ষার তারিখ",
+ "forms.label.ct_scan": "আপনি কি সিটি-স্ক্যান নিয়েছেন?",
+ "forms.label.ct_score": "আপনার সিটি-স্কোর লিখুন",
+ "forms.label.ct_score_field": "সিটি-স্কোর",
+ "forms.label.ct_scan_date": "আপনি কখন সিটি-স্ক্যান নিয়েছেন?",
+ "forms.label.prior_status": "অতিরিক্ত তথ্য.",
+ "forms.errors.ct_score.valid": "একটি বৈধ সিটি স্কোর নয়",
     "forms.errors.required": "প্রয়োজনীয়",
     "forms.errors.age.valid": "বৈধ বয়স মনে হচ্ছে না",
     "forms.errors.field_required": "সকল ক্ষেত্রগুলি চিহ্নিত (*) বাধ্যতামূলক",
@@ -48,19 +63,24 @@
     "forms.option.neg_test": "আমার শেষ পরীক্ষা পরিক্ষিত নেতিবাচক",
     "forms.option.no_test": "কখনও একটি পরীক্ষা নেয়া",
     "forms.option.positive_mild": "আমি হালকা উপসর্গ",
-    "forms.option.positive_moderate": "আমি পরিমিতরূপে গুরুতর লক্ষণ আছে",
+    "forms.option.positive_moderate": "পরিমিত লক্ষণ",
+    "forms.option.recovered_full": "চাঙ্গা",
+    "forms.option.no_resp_illness_exposed": "যোগাযোগের মাধ্যমে ভাইরাসের সংস্পর্শে আসতে পারে",
+    "forms.option.not_exposed": "যোগাযোগের মাধ্যমে ভাইরাসের সংস্পর্শে আসেনি",
+    "forms.option.loss_of_smell": "গন্ধ বা স্বাদ হ্রাস",
+
     "forms.option.positive_asymp": "আমি কোনো লক্ষণ (asymptomatic) থাকতে",
-    "forms.option.recovered_full": "আমি উপসর্গ ছিল এবং সম্পূর্ণরূপে সেরে উঠেছে",
+
     "forms.option.recovered_neg_test": "আমি পূর্বে ইতিবাচক পরীক্ষিত ছিল, কিন্তু এখন নেতিবাচক পরীক্ষা আছে এবং সম্পূর্ণরূপে উদ্ধার",
     "forms.option.resp_illness_not_identified": "আমি অন্য পূর্ব বিদ্যমান শ্বাসযন্ত্রের অসুস্থতা আছে",
-    "forms.option.no_resp_illness_exposed": "আমি কোন শ্বাসযন্ত্রের অসুস্থতা আছে কিন্তু আমি যোগাযোগের মাধ্যমে ভাইরাস উন্মুক্ত করা হয়ে থাকতে পারে",
+
     "forms.option.healthy": "আমি কোনো শ্বাসযন্ত্রের অসুস্থতা না থাকে",
     "forms.option.none_of_the_above": "উপরের কেউই না",
     "forms.option.cold": "ঠান্ডা",
     "forms.option.cough": "কাশি",
     "forms.option.fever": "জ্বর",
     "forms.option.pneumonia": "নিউমোনিয়া",
-    "forms.option.loss_of_smell": "গন্ধ ও স্বাদ ক্ষতি",
+
     "forms.option.smoker": "ধূমপায়ী",
     "forms.option.asthma": "এজমা",
     "forms.option.cld": "ক্রনিক ফুসফুসের রোগ",
@@ -123,5 +143,15 @@
     "note.button.dismiss": "খারিজ করা",
     "forms.label.using_mask": "আপনি কি এখন একটি মাস্ক পরেন?",
     "forms.option.bd": "শ্বাস প্রশ্বাস",
-    "forms.option.st": "গলা ব্যথা"
+    "forms.option.st": "গলা ব্যথা",
+    "forms.options.both_doses": "2 ডোজ",
+    "forms.options.one_dose": "1 ডোজ",
+    "forms.options.no_doses": "শেষ না",
+    "forms.option.rtpcr": "আরটি-পিসিআর",
+    "forms.option.rat": "ইঁদুর",
+    "forms.option.prev_pos": "পূর্বে ইতিবাচক পরীক্ষা করা হলেও এখন নেতিবাচক পরীক্ষা করেছেন tested",
+    "forms.option.never_pos": "ইতিবাচক পরীক্ষা করা হয়নি",
+
+    "forms.option.others_resp": "অন্যান্য",
+    "forms.option.others_preexist": "অন্যান্য"
 }
