--- a/projects/collect/src/assets/i18n/en-US.json
+++ b/projects/collect/src/assets/i18n/en-US.json
@@ -36,40 +36,68 @@
 	"forms.label.current_status": "Current Status",
 	"forms.label.taken_test": "Have you taken a COVID-19 test?",
 	"forms.label.health_conditions": "Health Conditions",
+	"forms.label.using_mask": "Are you wearing a mask now?",
+	"forms.label.smoking_habits": "Do you have smoking habits?",
+	"forms.label.vacc_status": "Vaccination Status?",
+	"forms.label.symptoms": "Do you have any of these symptoms?",
+	"forms.label.conditions": "Do you have any of these conditions?",
+	"forms.label.resp_ail": "Do you have any of these respiratory ailments?",
+	"forms.label.pre_exist": "Do you have any of these pre-existing conditions?",
+	"forms.label.test_type": "Which test have you taken?",
+	"forms.label.when_test": "When did you take the test?",
+	"forms.label.test_date": "Test Date",
+	"forms.label.ct_scan": "Have you taken a CT-Scan?",
+	"forms.label.ct_score": "Enter your CT-Score",
+	"forms.label.ct_score_field": "CT-Score",
+	"forms.label.ct_scan_date": "When did you take the CT-Scan?",
+	"forms.label.prior_status": "Additional Info.",
 	"forms.errors.required": "Required",
 	"forms.errors.age.valid": "Doesn't look like valid age",
 	"forms.errors.field_required": "All fields marked (*) are mandatory",
+	"forms.errors.ct_score.valid": "Not a Valid CT Score",
 	"forms.options.male": "Male",
 	"forms.options.female": "Female",
 	"forms.options.other": "Other",
 	"forms.options.yes": "Yes",
 	"forms.options.no": "No",
+	"forms.options.both_doses": "2 doses",
+	"forms.options.one_dose": "1 dose",
+	"forms.options.no_doses": "Not done",
 	"forms.option.pos_test": "Tested positive in my last test",
 	"forms.option.neg_test": "Tested negative in my last test",
 	"forms.option.no_test" : "Never taken a test",
+	"forms.option.rtpcr": "RT-PCR",
+	"forms.option.rat": "RAT",
+	"forms.option.prev_pos": "Previously tested positive, but have tested negative now",
+	"forms.option.never_pos": "Never tested positive",
 	"forms.option.positive_mild": "Mild symptoms",
-	"forms.option.positive_moderate": "Moderately severe symptoms",
+	"forms.option.positive_moderate": "Moderate symptoms",
 	"forms.option.positive_asymp": "No symptoms (asymptomatic)",
-	"forms.option.recovered_full": "Had symptoms and have recovered fully",
+	"forms.option.recovered_full": "Recovered",
 	"forms.option.recovered_neg_test": "Had previously tested positive, but have tested negative now and recovered fully",
 	"forms.option.resp_illness_not_identified": "Have other pre-existing respiratory illnesses",
-	"forms.option.no_resp_illness_exposed": "Have no respiratory illness but I may have been exposed to the virus through contact",
+	"forms.option.no_resp_illness_exposed": "May have been exposed to the virus through contact",
+	"forms.option.not_exposed": "Not been exposed to the virus through contact",
 	"forms.option.healthy": "Do not have any respiratory illnesses",
 	"forms.option.none_of_the_above": "None of the above",
 	"forms.option.cold": "Cold",
 	"forms.option.cough": "Cough",
 	"forms.option.fever": "Fever",
 	"forms.option.pneumonia": "Pneumonia",
-	"forms.option.loss_of_smell": "Loss of Smell & Taste",
+	"forms.option.loss_of_smell": "Loss of Smell or Taste",
 	"forms.option.smoker": "Smoker",
 	"forms.option.asthma": "Asthma",
 	"forms.option.cld": "Chronic Lung Disease",
 	"forms.option.ht": "Hypertension",
+	"forms.option.bd": "Breathing Difficulties",
+	"forms.option.st": "Sore Throat",
 	"forms.option.ihd": "Ischemic Heart Disease",
 	"forms.option.mp" : "Muscle Pain",
 	"forms.option.ftg" : "Fatigue",
 	"forms.option.diabetes": "Diabetes",
 	"forms.option.diarrhoea": "Diarrhoea",
+	"forms.option.others_resp": "Others",
+	"forms.option.others_preexist": "Others",
 	"record.message.info": "Please make sure you are in a quiet environment and keep your device around 20 cm from your face",
 	"record.title.breathing-shallow": "Breathing(shallow)",
 	"record.title.breathing-deep": "Breathing (deep)",
@@ -122,9 +150,6 @@
 	"device.mac": "MAC",
 	"device.android": "Android",
 	"device.ios": "iOs",
-	"note.button.dismiss": "Dismiss",
+	"note.button.dismiss": "Dismiss"
 
-	"forms.label.using_mask": "Are you wearing a mask now?",
-	"forms.option.bd": "Breathing Difficulties",
-	"forms.option.st": "Sore Throat"
 }
