--- a/projects/collect/src/assets/i18n/es-US.json
+++ b/projects/collect/src/assets/i18n/es-US.json
@@ -35,6 +35,21 @@
 	"forms.label.current_status": "Estado actual",
 	"forms.label.taken_test": "¿Ha realizado una prueba de COVID-19?",
 	"forms.label.health_conditions": "Condiciones de salud",
+	"forms.label.smoking_habits": "¿Tiene hábitos de fumar?",
+ "forms.label.vacc_status": "¿Estado de vacunación?",
+ "forms.label.symptoms": "¿Tiene alguno de estos síntomas?",
+ "forms.label.conditions": "¿Tiene alguna de estas condiciones?",
+ "forms.label.resp_ail": "¿Tiene alguna de estas dolencias respiratorias?",
+ "forms.label.pre_exist": "¿Tiene alguna de estas condiciones preexistentes?",
+ "forms.label.test_type": "¿Qué prueba has realizado?",
+ "forms.label.when_test": "¿Cuándo hiciste el examen?",
+ "forms.label.test_date": "Fecha de la prueba",
+ "forms.label.ct_scan": "¿Ha realizado una tomografía computarizada?",
+ "forms.label.ct_score": "Ingrese su CT-Score",
+ "forms.label.ct_score_field": "Puntuación CT",
+ "forms.label.ct_scan_date": "¿Cuándo se hizo la tomografía computarizada?",
+ "forms.label.prior_status": "Información adicional.",
+ "forms.errors.ct_score.valid": "No es una puntuación CT válida",
 	"forms.errors.required": "Requerido",
 	"forms.errors.age.valid": "No parece una edad válida",
 	"forms.errors.field_required": "Todos los campos marcados (*) son obligatorios",
@@ -47,19 +62,20 @@
 	"forms.option.neg_test": "Resultó negativo en mi última prueba",
 	"forms.option.no_test": "Nunca tomé una prueba",
 	"forms.option.positive_mild": "Síntomas leves",
-	"forms.option.positive_moderate": "Síntomas moderadamente graves",
+	"forms.option.positive_moderate": "Síntomas moderados",
+	"forms.option.recovered_full": "Recuperado",
+	"forms.option.no_resp_illness_exposed": "Puede haber estado expuesto al virus a través del contacto.",
+	"forms.option.not_exposed": "No ha estado expuesto al virus por contacto.",
+	"forms.option.loss_of_smell": "Pérdida del olfato o el gusto",
 	"forms.option.positive_asymp": "Sin síntomas (asintomático)",
-	"forms.option.recovered_full": "Ha tenido síntomas y se ha recuperado por completo.",
 	"forms.option.recovered_neg_test": "Anteriormente había dado positivo, pero ahora dio negativo y se recuperó por completo",
 	"forms.option.resp_illness_not_identified": "Tiene otras enfermedades respiratorias preexistentes",
-	"forms.option.no_resp_illness_exposed": "No tengo ninguna enfermedad respiratoria, pero es posible que haya estado expuesto al virus a través del contacto.",
  "forms.option.healthy": "No tiene ninguna enfermedad respiratoria.",
  "forms.option.none_of_the_above": "Ninguna de las anteriores",
  "forms.option.cold": "Frío",
  "forms.option.cough": "Tos",
  "forms.option.fever": "Fiebre",
  "forms.option.pneumonia": "Neumonía",
- "forms.option.loss_of_smell": "Pérdida del olfato y el gusto",
  "forms.option.smoker": "Fumador",
  "forms.option.asthma": "Asma",
  "forms.option.cld": "Enfermedad pulmonar crónica",
@@ -124,4 +140,15 @@
  "note.button.dismiss": "Despedir",
  "forms.label.using_mask": "¿Estás usando una máscara ahora?",
  "forms.option.bd": "Dificultades respiratorias",
- "forms.option.st": "Dolor de garganta"}
+ "forms.option.st": "Dolor de garganta",
+ "forms.options.both_doses": "2 dosis",
+ "forms.options.one_dose": "1 dosis",
+ "forms.options.no_doses": "No hecho",
+ "forms.option.rtpcr": "RT-PCR",
+ "forms.option.rat": "RATA",
+ "forms.option.prev_pos": "Anteriormente dio positivo, pero ahora dio negativo.",
+ "forms.option.never_pos": "Nunca dio positivo",
+
+ "forms.option.others_resp": "Otros",
+ "forms.option.others_preexist": "Otros"
+}
