--- a/projects/collect/src/assets/i18n/hi-IN.json
+++ b/projects/collect/src/assets/i18n/hi-IN.json
@@ -36,6 +36,21 @@
 	"forms.label.current_status": "वर्तमान स्थिति",
 	"forms.label.taken_test": "यदि आप एक COVID -19 परीक्षण उठाया है?",
 	"forms.label.health_conditions": "स्वास्थ्य की स्थिति",
+	"forms.label.smoking_habits": "क्या आपको धूम्रपान की आदत है?",
+ "forms.label.vacc_status": "टीकाकरण की स्थिति?",
+ "forms.label.symptoms": "क्या आपको इनमें से कोई लक्षण हैं?",
+ "forms.label.conditions": "क्या आपके पास इनमें से कोई शर्त है?",
+ "forms.label.resp_ail": "क्या आपको इनमें से कोई सांस की बीमारी है?",
+ "forms.label.pre_exist": "क्या आपके पास इनमें से कोई भी पूर्व-मौजूदा स्थिति है?",
+ "forms.label.test_type": "आपने कौन सी परीक्षा ली है?",
+ "forms.label.when_test": "आपने परीक्षा कब दी?",
+ "forms.label.test_date": "परीक्षा की तारीख",
+ "forms.label.ct_scan": "क्या आपने सीटी-स्कैन लिया है?",
+ "forms.label.ct_score": "अपना सीटी-स्कोर दर्ज करें",
+ "forms.label.ct_score_field": "सीटी-स्कोर",
+ "forms.label.ct_scan_date": "आपने सीटी-स्कैन कब लिया?",
+ "forms.label.prior_status": "अतिरिक्त जानकारी।",
+ "forms.errors.ct_score.valid": "मान्य सीटी स्कोर नहीं",
 	"forms.errors.required": "अपेक्षित",
 	"forms.errors.age.valid": "वैध उम्र की तरह नहीं दिखता",
 	"forms.errors.field_required": "सभी फ़ील्ड चिह्नित (*) अनिवार्य हैं",
@@ -48,19 +63,20 @@
 	"forms.option.neg_test": "मेरा आखिरी परीक्षा में परीक्षण किया गया नकारात्मक",
 	"forms.option.no_test": "कभी टेस्ट नहीं लिया",
 	"forms.option.positive_mild": "हल्के लक्षण",
-	"forms.option.positive_moderate": "मध्यम रूप से गंभीर लक्षण",
+	"forms.option.positive_moderate": "मध्यम लक्षण",
+	"forms.option.recovered_full": "बरामद",
+	"forms.option.no_resp_illness_exposed": "संपर्क के माध्यम से वायरस के संपर्क में आया हो सकता है",
+	"forms.option.not_exposed": "संपर्क के माध्यम से वायरस के संपर्क में नहीं आया",
+	"forms.option.loss_of_smell": "गंध या स्वाद की हानि",
 	"forms.option.positive_asymp": "कोई लक्षण नहीं है (स्पर्शोन्मुख)",
-	"forms.option.recovered_full": "लक्षण था और पूरी तरह से ठीक है",
 	"forms.option.recovered_neg_test": "पहले से सकारात्मक का परीक्षण किया था, लेकिन अब नकारात्मक परीक्षण किया है और पूरी तरह से ठीक",
 	"forms.option.resp_illness_not_identified": "अन्य पूर्व मौजूदा सांस की बीमारी है",
-	"forms.option.no_resp_illness_exposed": "कोई सांस की बीमारी है, लेकिन मैं संपर्क के माध्यम से वायरस के संपर्क में किया गया हो सकता",
 	"forms.option.healthy": "कोई सांस की बीमारियांनहीं है",
 	"forms.option.none_of_the_above": "इनमे से कोई भी नहीं",
 	"forms.option.cold": "सर्दी",
 	"forms.option.cough": "खांसी",
 	"forms.option.fever": "बुखार",
 	"forms.option.pneumonia": "न्यूमोनिया",
-	"forms.option.loss_of_smell": "सूंघने और स्वाद की शक्ति में कमी ",
 	"forms.option.smoker": "धूम्रपान करने वाले ",
 	"forms.option.asthma": "दमा",
 	"forms.option.cld": "जीर्ण फेफड़ों के रोग",
@@ -124,5 +140,15 @@
  "note.button.dismiss": "खारिज",
  "forms.label.using_mask": "क्या आपने अभी मास्क पहना है?",
     "forms.option.bd": "साँस की तकलीफे",
-    "forms.option.st": "गले में खराश"
+    "forms.option.st": "गले में खराश",
+	"forms.options.both_doses": "2 खुराक",
+	"forms.options.one_dose": "1 खुराक",
+	"forms.options.no_doses": "नहीं किया",
+	"forms.option.rtpcr": "आरटी-पीसीआर",
+	"forms.option.rat": "RAT",
+	"forms.option.prev_pos": "पहले सकारात्मक परीक्षण किया गया था, लेकिन अब नकारात्मक परीक्षण किया गया है",
+	"forms.option.never_pos": "कभी सकारात्मक परीक्षण नहीं किया",
+
+	"forms.option.others_resp": "अन्य",
+	"forms.option.others_preexist": "अन्य"
 }
