--- a/projects/collect/src/assets/i18n/ka-IN.json
+++ b/projects/collect/src/assets/i18n/ka-IN.json
@@ -36,6 +36,21 @@
   "forms.label.current_status": "ಪ್ರಸ್ತುತ ಸ್ಥಿತಿ",
   "forms.label.taken_test": "ನೀವು COVID -19 ಪರೀಕ್ಷೆ ತೆಗೆದುಕೊಂಡ?",
   "forms.label.health_conditions": "ಆರೋಗ್ಯದ ಸ್ಥಿತಿ",
+  "forms.label.smoking_habits": "ನಿಮಗೆ ಧೂಮಪಾನದ ಅಭ್ಯಾಸವಿದೆಯೇ?",
+ "forms.label.vacc_status": "ವ್ಯಾಕ್ಸಿನೇಷನ್ ಸ್ಥಿತಿ?",
+ "forms.label.symptoms": "ನೀವು ಈ ಯಾವುದೇ ರೋಗಲಕ್ಷಣಗಳನ್ನು ಹೊಂದಿದ್ದೀರಾ?",
+ "forms.label.conditions": "ನೀವು ಈ ಯಾವುದೇ ಷರತ್ತುಗಳನ್ನು ಹೊಂದಿದ್ದೀರಾ?",
+ "forms.label.resp_ail": "ಈ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳಲ್ಲಿ ಯಾವುದಾದರೂ ಇದೆಯೇ?",
+ "forms.label.pre_exist": "ಈ ಪೂರ್ವ-ಅಸ್ತಿತ್ವದಲ್ಲಿರುವ ಯಾವುದೇ ಷರತ್ತುಗಳನ್ನು ನೀವು ಹೊಂದಿದ್ದೀರಾ?",
+ "forms.label.test_type": "ನೀವು ಯಾವ ಪರೀಕ್ಷೆಯನ್ನು ತೆಗೆದುಕೊಂಡಿದ್ದೀರಿ?",
+ "forms.label.when_test": "ನೀವು ಯಾವಾಗ ಪರೀಕ್ಷೆ ತೆಗೆದುಕೊಂಡಿದ್ದೀರಿ?",
+ "forms.label.test_date": "ಪರೀಕ್ಷಾ ದಿನಾಂಕ",
+ "forms.label.ct_scan": "ನೀವು ಸಿಟಿ-ಸ್ಕ್ಯಾನ್ ತೆಗೆದುಕೊಂಡಿದ್ದೀರಾ?",
+ "forms.label.ct_score": "ನಿಮ್ಮ CT- ಸ್ಕೋರ್ ಅನ್ನು ನಮೂದಿಸಿ",
+ "forms.label.ct_score_field": "ಸಿಟಿ-ಸ್ಕೋರ್",
+ "forms.label.ct_scan_date": "ನೀವು ಯಾವಾಗ ಸಿಟಿ-ಸ್ಕ್ಯಾನ್ ತೆಗೆದುಕೊಂಡಿದ್ದೀರಿ?",
+ "forms.label.prior_status": "ಹೆಚ್ಚುವರಿ ಮಾಹಿತಿ.",
+ "forms.errors.ct_score.valid": "ಮಾನ್ಯ ಸಿಟಿ ಸ್ಕೋರ್ ಅಲ್ಲ",
   "forms.errors.required": "ಅವಶ್ಯ",
   "forms.errors.age.valid": "ವಯಸ್ಸು ತಪ್ಪಾಗಿರುವಂತಿದೆ",
   "forms.errors.field_required": "(*) ಗುರುತು ಹೊಂದಿರುವ ಅಂಶಗಳು ಕಡ್ಡಾಯವಾಗಿರುತ್ತದೆ",
@@ -48,19 +63,20 @@
   "forms.option.neg_test": "ನನ್ನ ಕೊನೆಯ ಪರೀಕ್ಷೆಯಲ್ಲಿ ಪರೀಕ್ಷಿಸಲ್ಪಟ್ಟಿದೆ ಋಣಾತ್ಮಕ",
   "forms.option.no_test": "ಪರೀಕ್ಷಾ ತೆಗೆದುಕೊಳ್ಳುವಂತೆ",
   "forms.option.positive_mild": "ಸೌಮ್ಯ ರೋಗಲಕ್ಷಣಗಳನ್ನು",
-  "forms.option.positive_moderate": "ಮಧ್ಯಮ ಗಂಭೀರ ಲಕ್ಷಣಗಳು",
+  "forms.option.positive_moderate": "ಮಧ್ಯಮ ಲಕ್ಷಣಗಳು",
+  "forms.option.recovered_full": "ಚೇತರಿಸಿಕೊಂಡ",
+  "forms.option.no_resp_illness_exposed": "ಸಂಪರ್ಕದ ಮೂಲಕ ವೈರಸ್ ಗೆ ಒಡ್ಡಿಕೊಂಡಿರಬಹುದು",
+  "forms.option.not_exposed": "ಸಂಪರ್ಕದ ಮೂಲಕ ವೈರಸ್ ಗೆ ಒಡ್ಡಿಕೊಳ್ಳುವುದಿಲ್ಲ",
+  "forms.option.loss_of_smell": "ವಾಸನೆ ಅಥವಾ ರುಚಿಯ ನಷ್ಟ",
   "forms.option.positive_asymp": "ಯಾವುದೇ ಲಕ್ಷಣಗಳು (ಲಕ್ಷಣಗಳಿಲ್ಲದ)",
-  "forms.option.recovered_full": "ಲಕ್ಷಣಗಳನ್ನು ಹೊಂದಿತ್ತು ಸಂಪೂರ್ಣವಾಗಿ ಚೇತರಿಸಿಕೊಂಡ",
   "forms.option.recovered_neg_test": "ಹ್ಯಾಡ್ ಹಿಂದೆ ಧನಾತ್ಮಕ ಪರೀಕ್ಷಿಸಲಾಯಿತು, ಆದರೆ ಈಗ ಋಣಾತ್ಮಕ ಪರೀಕ್ಷಿಸಿದ್ದಾರೆ ಮತ್ತು ಸಂಪೂರ್ಣವಾಗಿ ಚೇತರಿಸಿಕೊಂಡ",
   "forms.option.resp_illness_not_identified": "ಇತರ ಪೂರ್ವ ಅಸ್ತಿತ್ವದಲ್ಲಿರುವ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳ ಹ್ಯಾವ್",
-  "forms.option.no_resp_illness_exposed": "ಯಾವುದೇ ಉಸಿರಾಟದ ತೊಂದರೆಯನ್ನು ಹ್ಯಾವ್ ಆದರೆ ನಾನು ಸಂಪರ್ಕದ ಮೂಲಕ ವೈರಾಣುವಿನ ಗೆ ಬಹಿರಂಗಗೊಂಡವು ಮಾಡಬಹುದು",
   "forms.option.healthy": "ಯಾವುದೇ ಉಸಿರಾಟದ ಕಾಯಿಲೆಗಳ ಹೊಂದಿಲ್ಲವೇ",
   "forms.option.none_of_the_above": "ಮೇಲಿನ ಯಾವುದೂ ಅಲ್ಲ",
   "forms.option.cold": "ಶೀತ",
   "forms.option.cough": "ಕೆಮ್ಮು",
   "forms.option.fever": "ಜ್ವರ",
   "forms.option.pneumonia": "ನ್ಯುಮೋನಿಯಾ",
-  "forms.option.loss_of_smell": "ಸ್ಮೆಲ್ & ಟೇಸ್ಟ್ ನಷ್ಟ",
   "forms.option.smoker": "ಧೂಮಪಾನಿ",
   "forms.option.asthma": "ಉಬ್ಬಸ (ಆಸ್ತ್ಮ) ",
   "forms.option.cld": "ದೀರ್ಘಕಾಲದ ಶ್ವಾಸಕೋಶದ ಕಾಯಿಲೆ",
@@ -123,5 +139,14 @@
   "note.button.dismiss": "ವಜಾಗೊಳಿಸಿ",
   "forms.label.using_mask": "ನೀವು ಮಾಸ್ಕ್ ಧರಿಸಿದ್ದೀರಾ?",
   "forms.option.bd": "ಉಸಿರಾಟದ ತೊಂದರೆಗಳು ",
-  "forms.option.st": "ಗಂಟಲು ಕೆರತ"
+  "forms.option.st": "ಗಂಟಲು ಕೆರತ",
+  "forms.options.both_doses": "2 ಪ್ರಮಾಣಗಳು",
+  "forms.options.one_dose": "1 ಡೋಸ್",
+  "forms.options.no_doses": "ಮಾಡಿಲ್ಲ",
+  "forms.option.rtpcr": "ಆರ್ಟಿ-ಪಿಸಿಆರ್",
+  "forms.option.rat": "ಇಲಿ",
+  "forms.option.prev_pos": "ಹಿಂದೆ ಧನಾತ್ಮಕವಾಗಿ ಪರೀಕ್ಷಿಸಲಾಗಿದೆ, ಆದರೆ ಈಗ ನಕಾರಾತ್ಮಕತೆಯನ್ನು ಪರೀಕ್ಷಿಸಿದೆ",
+  "forms.option.never_pos": "ಧನಾತ್ಮಕ ಪರೀಕ್ಷೆ ಎಂದಿಗೂ",
+  "forms.option.others_resp": "ಇತರರು",
+  "forms.option.others_preexist": "ಇತರರು"
 }
