--- a/projects/collect/src/assets/i18n/ml-IN.json
+++ b/projects/collect/src/assets/i18n/ml-IN.json
@@ -36,6 +36,21 @@
  "forms.label.current_status": "ഇപ്പോഴത്തെ അവസ്ഥ",
  "forms.label.taken_test": "നിങ്ങൾ ഒരു ചൊവിദ്-19 ടെസ്റ്റ് വാങ്ങിയിട്ടുണ്ടോ?",
  "forms.label.health_conditions": "ആരോഗ്യ അവസ്ഥകൾ",
+ "forms.label.smoking_habits": "നിങ്ങൾക്ക് പുകവലി ശീലമുണ്ടോ?",
+ "forms.label.vacc_status": "വാക്സിനേഷൻ നില?",
+ "forms.label.symptoms": "നിങ്ങൾക്ക് ഈ ലക്ഷണങ്ങളിൽ എന്തെങ്കിലും ഉണ്ടോ?",
+ "forms.label.conditions": "നിങ്ങൾക്ക് ഈ നിബന്ധനകളിലേതെങ്കിലും ഉണ്ടോ?",
+ "forms.label.resp_ail": "നിങ്ങൾക്ക് ഈ ശ്വാസകോശ സംബന്ധമായ അസുഖങ്ങൾ ഉണ്ടോ?",
+ "forms.label.pre_exist": "നിങ്ങൾക്ക് മുമ്പ് നിലവിലുള്ള ഏതെങ്കിലും നിബന്ധനകൾ ഉണ്ടോ?",
+ "forms.label.test_type": "ഏത് പരിശോധനയാണ് നിങ്ങൾ നടത്തിയത്?",
+ "forms.label.when_test": "എപ്പോഴാണ് നിങ്ങൾ പരിശോധന നടത്തിയത്?",
+ "forms.label.test_date": "പരിശോധന തീയതി",
+ "forms.label.ct_scan": "നിങ്ങൾ ഒരു സിടി സ്കാൻ എടുത്തിട്ടുണ്ടോ?",
+ "forms.label.ct_score": "നിങ്ങളുടെ CT- സ്കോർ നൽകുക",
+ "forms.label.ct_score_field": "സിടി-സ്കോർ",
+ "forms.label.ct_scan_date": "എപ്പോഴാണ് നിങ്ങൾ സിടി-സ്കാൻ എടുത്തത്?",
+ "forms.label.prior_status": "അധിക വിവരം.",
+ "forms.errors.ct_score.valid": "സാധുവായ സിടി സ്കോർ അല്ല",
  "forms.errors.required": "ആവശ്യമായ",
  "forms.errors.age.valid": "സാധുവായ വയസ്സിൽ തോന്നുന്നില്ല",
  "forms.errors.field_required": "എല്ലാ ഫീൽഡുകൾ അടയാളപ്പെടുത്തുന്നു (*) നിർബന്ധമാണ്",
@@ -48,19 +63,24 @@
  "forms.option.neg_test": "എന്റെ അവസാന ടെസ്റ്റിൽ പരീക്ഷിച്ചു നെഗറ്റീവ്",
  "forms.option.no_test": "ഒരു ടെസ്റ്റ് എടുത്ത ഒരിക്കലും",
  "forms.option.positive_mild": "നേരിയ മോശം ലക്ഷണങ്ങൾ",
- "forms.option.positive_moderate": "മോശമല്ലാത്ത കടുത്ത ലക്ഷണങ്ങൾ",
+ "forms.option.positive_moderate": "മിതമായ ലക്ഷണങ്ങൾ",
+ "forms.option.recovered_full": "വീണ്ടെടുത്തു",
+ "forms.option.no_resp_illness_exposed": "കോൺ ടാക്റ്റ് വഴി വൈറസ് ബാധിച്ചിരിക്കാം",
+ "forms.option.not_exposed": "കോൺ ടാക്റ്റ് വഴി വൈറസ് ബാധിച്ചിട്ടില്ല",
+ "forms.option.loss_of_smell": "മണം അല്ലെങ്കിൽ രുചി നഷ്ടപ്പെടുന്നത്",
+
  "forms.option.positive_asymp": "ഇല്ല ലക്ഷണങ്ങൾ (അസ്യ്ംപ്തൊമതിച്)",
- "forms.option.recovered_full": "ലക്ഷണങ്ങൾ ഉണ്ടായിരുന്നു പൂർണ്ണമായി കണ്ടെടുത്തു",
+
  "forms.option.recovered_neg_test": "മുമ്പ് പരീക്ഷിച്ചു നല്ല; ഇപ്പോഴോ നെഗറ്റീവ് പരീക്ഷിച്ചു പൂർണ്ണമായും കണ്ടെടുത്തു",
  "forms.option.resp_illness_not_identified": "മറ്റ് പ്രീ-നിലവിലുള്ള ശ്വാസകോശ രോഗങ്ങൾ ഉണ്ടോ",
- "forms.option.no_resp_illness_exposed": "യാതൊരു ശ്വാസകോശ രോഗം ഉണ്ടോ ഞാൻ സമ്പർക്കത്തിലൂടെയാണ് വൈറസ് പ്രിഫർ ചെയ്തിരിക്കാം",
+
  "forms.option.healthy": "ഏതെങ്കിലും ശ്വാസകോശ രോഗങ്ങൾ ഇല്ല",
  "forms.option.none_of_the_above": "മുകളിൽ കൊടുത്തിരിക്കുന്നതിൽ ഒന്നുമല്ല",
  "forms.option.cold": "തണുത്ത",
  "forms.option.cough": "ചുമ",
  "forms.option.fever": "പനി",
  "forms.option.pneumonia": "ന്യുമോണിയ",
- "forms.option.loss_of_smell": "മണക്കുക & ആസ്വദിച്ച് നഷ്ടപ്പെടുന്നത്",
+
  "forms.option.smoker": "വലിക്കും",
  "forms.option.asthma": "ആത്സ്മ",
  "forms.option.cld": "വിട്ടുമാറാത്ത ലങ് രോഗം",
@@ -123,5 +143,15 @@
  "note.button.dismiss": "പുറംതള്ളുക",
  "forms.label.using_mask": "നിങ്ങൾ ഇപ്പോൾ മാസ്ക് ധരിക്കുന്നുണ്ടോ?",
     "forms.option.bd": "ശ്വസിക്കാനുള്ള ബുദ്ധിമുട്ടുകൾ",
-    "forms.option.st": "തൊണ്ടവേദന"
+    "forms.option.st": "തൊണ്ടവേദന",
+    "forms.options.both_doses": "2 ഡോസുകൾ",
+    "forms.options.one_dose": "1 ഡോസ്",
+    "forms.options.no_doses": "ചെയ്തിട്ടില്ല",
+    "forms.option.rtpcr": "RT-PCR",
+    "forms.option.rat": "RAT",
+    "forms.option.prev_pos": "മുമ്പ് പോസിറ്റീവ് പരീക്ഷിച്ചു, പക്ഷേ ഇപ്പോൾ നെഗറ്റീവ് പരീക്ഷിച്ചു",
+    "forms.option.never_pos": "ഒരിക്കലും പോസിറ്റീവ് പരീക്ഷിച്ചിട്ടില്ല",
+
+    "forms.option.others_resp": "മറ്റുള്ളവർ",
+    "forms.option.others_preexist": "മറ്റുള്ളവർ"
 }
