--- a/projects/collect/src/assets/i18n/ta-IN.json
+++ b/projects/collect/src/assets/i18n/ta-IN.json
@@ -36,6 +36,21 @@
  "forms.label.current_status": "தற்போதைய நிலை",
  "forms.label.taken_test": "நீங்கள் COVID 19 சோதனை மேற்கொண்டீர்களா?",
  "forms.label.health_conditions": "உடல் நிலை",
+ "forms.label.smoking_habits": "உங்களுக்கு புகைபிடிக்கும் பழக்கம் இருக்கிறதா?",
+ "forms.label.vacc_status": "தடுப்பூசி நிலை?",
+ "forms.label.symptoms": "இந்த அறிகுறிகள் ஏதேனும் உண்டா?",
+ "forms.label.conditions": "இந்த நிபந்தனைகள் ஏதேனும் உண்டா?",
+ "forms.label.resp_ail": "இந்த சுவாச நோய்கள் ஏதேனும் உண்டா?",
+ "forms.label.pre_exist": "முன்பே இருக்கும் இந்த நிபந்தனைகள் ஏதேனும் உண்டா?",
+ "forms.label.test_type": "நீங்கள் எந்த சோதனை எடுத்துள்ளீர்கள்?",
+ "forms.label.when_test": "நீங்கள் எப்போது சோதனை எடுத்தீர்கள்?",
+ "forms.label.test_date": "சோதனை தேதி",
+ "forms.label.ct_scan": "நீங்கள் சி.டி-ஸ்கேன் எடுத்துள்ளீர்களா?",
+ "forms.label.ct_score": "உங்கள் CT- மதிப்பெண்ணை உள்ளிடவும்",
+ "forms.label.ct_score_field": "சி.டி-ஸ்கோர்",
+ "forms.label.ct_scan_date": "சி.டி-ஸ்கேன் எப்போது எடுத்தீர்கள்?",
+ "forms.label.prior_status": "கூடுதல் தகவல்.",
+ "forms.errors.ct_score.valid": "செல்லுபடியாகும் CT மதிப்பெண் அல்ல",
  "forms.errors.required": "தேவையான",
  "forms.errors.age.valid": "சரியான வயது போல இல்லை",
  "forms.errors.field_required": "(*) குறிக்கப்பட்ட எல்லா விவரங்கள் அவசியமானது",
@@ -48,19 +63,20 @@
  "forms.option.neg_test": "என் கடந்த சோதனை சோதிக்கப்பட்டது எதிர்மறை",
  "forms.option.no_test": "ஒருபோதும் சோதனை எடுத்ததில்லை",
  "forms.option.positive_mild": "லேசான அறிகுறிகள் தென்படுகின்றன",
- "forms.option.positive_moderate": "மிதமான மற்றும் கடுமையான அறிகுறிகள் தென்படுகின்றன",
+ "forms.option.positive_moderate": "மிதமான அறிகுறிகள்",
+ "forms.option.recovered_full": "மீட்கப்பட்டது",
+ "forms.option.no_resp_illness_exposed": "தொடர்பு மூலம் வைரஸுக்கு ஆளாகியிருக்கலாம்",
+ "forms.option.not_exposed": "தொடர்பு மூலம் வைரஸுக்கு ஆளாகவில்லை",
+ "forms.option.loss_of_smell": "வாசனை அல்லது சுவை இழப்பு",
  "forms.option.positive_asymp": "எந்த அறிகுறிகளும் இல்லை (அறிகுறியில்லை)",
- "forms.option.recovered_full": "அறிகுறிகள் இருந்தது. பின் முழுமையாக குணமடைந்து விட்டேன்",
  "forms.option.recovered_neg_test": "முன்பு சோதனையில் நேர்மறை, ஆனால் இப்போது சோதனையில் எதிர்மறை. முழுமையாக குணமடைந்து விட்டேன்",
  "forms.option.resp_illness_not_identified": "முன்பே வேறு சுவாச நோய்கள் உள்ளன",
- "forms.option.no_resp_illness_exposed": "எனக்கு எந்த சுவாச நோயும் இல்லை, ஆனால் நான் தொடர்பு மூலம் வைரஸ் தாக்கப்பட்டு இருக்கலாம்",
  "forms.option.healthy": "எனக்கு எந்த சுவாச நோய்கள் இல்லை",
  "forms.option.none_of_the_above": "மேலே குறிப்பிட்டவை எதுவுமில்லை",
  "forms.option.cold": "சளி",
  "forms.option.cough": "இருமல்",
  "forms.option.fever": "காய்ச்சல்",
  "forms.option.pneumonia": "நிமோனியா",
- "forms.option.loss_of_smell": "வாசனைத்திறன் மற்றும் ருசி இழப்பு",
  "forms.option.smoker": "புகைப்பிடிப்பவர்",
  "forms.option.asthma": "ஆஸ்துமா",
  "forms.option.cld": "நாள்பட்ட நுரையீரல் நோய்",
@@ -123,5 +139,15 @@
  "note.button.dismiss": "நிராகரி",
  "forms.label.using_mask": "நீங்கள் இப்பொழுது முகமூடி அணிந்திருக்கிறீர்களா??",
 	"forms.option.bd": "சுவாச சிரமங்கள்",
-	"forms.option.st": "தொண்டை வலி"
+	"forms.option.st": "தொண்டை வலி",
+    "forms.options.both_doses": "2 அளவுகள்",
+    "forms.options.one_dose": "1 டோஸ்",
+    "forms.options.no_doses": "முடிக்கவில்லை",
+    "forms.option.rtpcr": "ஆர்டி-பி.சி.ஆர்",
+    "forms.option.rat": "RAT",
+    "forms.option.prev_pos": "முன்பு நேர்மறை சோதனை, ஆனால் இப்போது எதிர்மறை சோதனை",
+    "forms.option.never_pos": "நேர்மறையை ஒருபோதும் சோதிக்கவில்லை",
+
+    "forms.option.others_resp": "மற்றவைகள்",
+    "forms.option.others_preexist": "மற்றவைகள்"
 }
