--- a/projects/collect/src/assets/i18n/te-IN.json
+++ b/projects/collect/src/assets/i18n/te-IN.json
@@ -39,6 +39,7 @@
     "forms.errors.required": "తప్పనిసరి",
     "forms.errors.age.valid": "చెల్లుబాటు అయ్యే వయస్సు లాగా అనిపించడం లేదు",
     "forms.errors.field_required": "(*) గురుతు ఉన్న అంశాలు తప్పనిసరి",
+    "forms.errors.ct_score.valid": "చెల్లుబాటు అయ్యే CT స్కోరు కాదు",
     "forms.options.male": "పురుషుడు",
     "forms.options.female": "స్త్రీ",
     "forms.options.other": "ఇతర",
@@ -48,12 +49,13 @@
     "forms.option.neg_test": "నా గత పరీక్షలో పరీక్షించబడింది ప్రతికూల",
     "forms.option.no_test": "ఒక పరీక్ష తీసుకున్న ఎప్పుడూ",
     "forms.option.positive_mild": "స్వల్ప లక్షణాలను",
-    "forms.option.positive_moderate": "పరిమితంగా కలిగే తీవ్రమైన లక్షణాలు",
+    "forms.option.positive_moderate": "మితమైన లక్షణాలు",
+    "forms.option.recovered_full": "కోలుకున్నారు",
+    "forms.option.no_resp_illness_exposed": "పరిచయం ద్వారా వైరస్ బారిన పడవచ్చు",
+    "forms.option.not_exposed": "పరిచయం ద్వారా వైరస్ బారిన పడలేదు",
     "forms.option.positive_asymp": "లక్షణాలు (కన్పించడం) తోబుట్టువుల",
-    "forms.option.recovered_full": "లక్షణాలు కలిగి మరియు పూర్తిగా కోలుకున్న",
     "forms.option.recovered_neg_test": "గతంలో ధృవపడింది వచ్చింది, కానీ ఇప్పుడు ప్రతికూల పరీక్షించి మరియు పూర్తిగా కోలుకోలేదు",
     "forms.option.resp_illness_not_identified": "ఇతర పూర్వ ఇప్పటికే శ్వాస రోగాలతో",
-    "forms.option.no_resp_illness_exposed": "ఏ శ్వాస అనారోగ్యం కలిగి కానీ నేను పరిచయం ద్వారా వైరస్ గురైనట్లు ఉండవచ్చు",
     "forms.option.healthy": "ఏ శ్వాస అనారోగ్యం ఉందా",
     "forms.option.none_of_the_above": "పైవేవీ కావు",
     "forms.option.cold": "జలుబు",
@@ -123,5 +125,28 @@
     "note.button.dismiss": "రద్దు చేయి",
     "forms.label.using_mask": "మీరు ఇప్పుడు ముసుగు ధరించారా?",
     "forms.option.bd": "శ్వాస తీసుకోవడంలో ఇబ్బందులు",
-    "forms.option.st": "గొంతు మంట"
+    "forms.option.st": "గొంతు మంట",
+    "forms.label.smoking_habits": "మీకు ధూమపాన అలవాటు ఉందా?",
+    "forms.label.vacc_status": "టీకా స్థితి?",
+    "forms.label.symptoms": "మీకు ఈ లక్షణాలు ఏమైనా ఉన్నాయా?",
+    "forms.label.conditions": "మీకు ఈ షరతులు ఏమైనా ఉన్నాయా?",
+    "forms.label.resp_ail": "మీకు ఈ శ్వాసకోశ వ్యాధులు ఏమైనా ఉన్నాయా?",
+    "forms.label.pre_exist": "మీకు ఇంతకు ముందు ఉన్న పరిస్థితులు ఏమైనా ఉన్నాయా?",
+    "forms.label.test_type": "మీరు ఏ పరీక్ష తీసుకున్నారు?",
+    "forms.label.when_test": "మీరు ఎప్పుడు పరీక్ష తీసుకున్నారు?",
+    "forms.label.test_date": "పరీక్ష తేదీ",
+    "forms.label.ct_scan": "మీరు CT- స్కాన్ తీసుకున్నారా?",
+    "forms.label.ct_score": "మీ CT- స్కోర్ cను నమోదు చేయండి",
+    "forms.label.ct_score_field": "CT- స్కోరు",
+    "forms.label.ct_scan_date": "మీరు ఎప్పుడు CT- స్కాన్ తీసుకున్నారు?",
+    "forms.label.prior_status": "అదనపు సమాచారం.",
+    "forms.options.both_doses": "2 మోతాదులు",
+    "forms.options.one_dose": "1 మోతాదు",
+    "forms.options.no_doses": "చెయ్యలేదు",
+    "forms.option.rtpcr": "RT-PCR",
+    "forms.option.rat": "RAT",
+    "forms.option.prev_pos": "గతంలో పాజిటివ్ పరీక్షించారు, కానీ ఇప్పుడు నెగటివ్ పరీక్షించారు",
+    "forms.option.never_pos": "పాజిటివ్\u200cను ఎప్పుడూ పరీక్షించలేదు",
+    "forms.option.others_resp": "ఇతరులు",
+    "forms.option.others_preexist": "ఇతరులు"
 }
