--- a/projects/collect/src/assets/i18n/ma-IN.json
+++ b/projects/collect/src/assets/i18n/ma-IN.json
@@ -36,6 +36,21 @@
     "forms.label.current_status": "वर्तमान स्थिती",
     "forms.label.taken_test": "आपण COVID-19 परीक्षा घेतली आहे का?",
     "forms.label.health_conditions": "आरोग्य स्थिती",
+    "forms.label.smoking_habits": "तुम्हाला धूम्रपान करण्याची सवय आहे का?",
+ "forms.label.vacc_status": "लसीकरण स्थिती?",
+ "forms.label.symptoms": "आपल्याला यापैकी काही लक्षणे आहेत?",
+ "forms.label.conditions": "आपल्याकडे यापैकी काही अटी आहेत?",
+ "forms.label.resp_ail": "आपल्याकडे यापैकी काही श्वसन आजार आहे?",
+ "forms.label.pre_exist": "आपल्याकडे यापैकी कोणतीही पूर्व-विद्यमान स्थिती आहे?",
+ "forms.label.test_type": "आपण कोणती परीक्षा दिली आहे?",
+ "forms.label.when_test": "आपण कधी परीक्षा दिली?",
+ "forms.label.test_date": "चाचणी तारीख",
+ "forms.label.ct_scan": "आपण सीटी-स्कॅन घेतला आहे का?",
+ "forms.label.ct_score": "आपला सीटी-स्कोअर प्रविष्ट करा",
+ "forms.label.ct_score_field": "सीटी-स्कोअर",
+ "forms.label.ct_scan_date": "आपण सीटी-स्कॅन कधी घेतला?",
+ "forms.label.prior_status": "अतिरिक्त माहिती.",
+ "forms.errors.ct_score.valid": "वैध सीटी स्कोअर नाही",
     "forms.errors.required": "आवश्यक",
     "forms.errors.age.valid": "वैध वय दिसत नाही",
     "forms.errors.field_required": "म्हणून (*) चिन्हांकित केलेले सर्व फील्ड अनिवार्य आहेत",
@@ -48,19 +63,20 @@
     "forms.option.neg_test": "माझ्या शेवटच्या कसोटी चाचणी नकारात्मक",
     "forms.option.no_test": "एक चाचणी घेतली कधीही",
     "forms.option.positive_mild": "सौम्य लक्षणे",
-    "forms.option.positive_moderate": "माफक प्रमाणात तीव्र लक्षणे",
+    "forms.option.positive_moderate": "मध्यम लक्षणे",
+    "forms.option.recovered_full": "पुनर्प्राप्त",
+    "forms.option.no_resp_illness_exposed": "संपर्काद्वारे व्हायरसच्या संपर्कात आले आहे",
+    "forms.option.not_exposed": "संपर्काद्वारे व्हायरसच्या संपर्कात आले नाही",
+    "forms.option.loss_of_smell": "गंध किंवा चव कमी होणे",
     "forms.option.positive_asymp": "कोणतीही लक्षणे (लक्षणे नसलेला)",
-    "forms.option.recovered_full": "लक्षणे होती आणि पूर्णपणे तंदुरुस्त आहे",
     "forms.option.recovered_neg_test": "होते पूर्वी सकारात्मक चाचणी, पण आता नकारात्मक चाचणी केली आहे आणि पूर्णपणे तंदुरुस्त",
     "forms.option.resp_illness_not_identified": "इतर पूर्व-विद्यमान श्वसन आजार आहे",
-    "forms.option.no_resp_illness_exposed": "नाही श्वसन आजार आहे पण मी संपर्क व्हायरस उघड केले गेले असावे",
     "forms.option.healthy": "कोणत्याही श्वसन आजार नाही",
     "forms.option.none_of_the_above": "वरीलपैकी काहीही नाही",
     "forms.option.cold": "सर्दी",
     "forms.option.cough": "खोकला",
     "forms.option.fever": "ताप",
     "forms.option.pneumonia": "न्यूमोनिया",
-    "forms.option.loss_of_smell": "वास आणि चव नष्ट होणे",
     "forms.option.smoker": "धूम्रपान",
     "forms.option.asthma": "दमा",
     "forms.option.cld": "तीव्र फुफ्फुसाचा रोग",
@@ -123,5 +139,14 @@
     "note.button.dismiss": "काढून टाकणे",
     "forms.label.using_mask": "आपण आता मुखवटा घातला आहे?",
     "forms.option.bd": "श्वास घेण्यास अडचणी",
-    "forms.option.st": "घसा खवखवणे"
+    "forms.option.st": "घसा खवखवणे",
+    "forms.options.both_doses": "2 डोस",
+    "forms.options.one_dose": "1 डोस",
+    "forms.options.no_doses": "झाले नाही",
+    "forms.option.rtpcr": "आरटी-पीसीआर",
+    "forms.option.rat": "रॅट",
+    "forms.option.prev_pos": "पूर्वी सकारात्मक चाचणी केली होती, परंतु आता नकारात्मक चाचणी केली आहे",
+    "forms.option.never_pos": "कधीही सकारात्मक चाचणी केली गेली नाही",
+    "forms.option.others_resp": "इतर",
+    "forms.option.others_preexist": "इतर"
 }
